--- a/MoshimoBox/MoshimoBox.csproj
+++ b/MoshimoBox/MoshimoBox.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="LivetCask" Version="4.0.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
     <PackageReference Include="Ulid" Version="1.3.4" />
 	  <PackageReference Include="WPF-UI" Version="3.0.5" />
